--- a/nodejs_deploy.yml
+++ b/nodejs_deploy.yml
@@ -4,7 +4,7 @@
   become: true
 
   - name: "Copyin files"
-    copy: src=./app_code dest=/home/ubuntu/ owner=ubuntu group=admin mode=755
+    copy: src=app_code dest=/home/ubuntu/ owner=ubuntu group=admin mode=755
 
   - name: "Deploying nodejs app"
     command: pm2 start /home/ubuntu/app_code/app.js --name 'nodejs app'
