--- a/devops/nodejs_deploy.yml
+++ b/devops/nodejs_deploy.yml
@@ -4,10 +4,10 @@
   become: true
   tasks:
    - name: "Copyin files"
-     copy: src=./app_code dest=/home/ubuntu owner=ubuntu group=admin mode=755
+     copy: src=./ dest=/home/ubuntu owner=ubuntu group=admin mode=755
 
    - name: "Deploying nodejs app"
-     command: pm2 start /home/ubuntu/app_code/app.js --name 'nodejs app'
+     command: pm2 start /home/ubuntu/nodej_deploy/app.js --name 'nodejs app'
      register: deploy
 
    - name: "Deploying"
